appId: com.soen345.project
---
- launchApp
- waitForAnimationToEnd

- runFlow:
    file: login.yml
    env:
      email: "andy@test.com"
      password: "password123"

- waitForAnimationToEnd
- assertVisible: "Browse Events"

- extendedWaitUntil:
    visible:
        id: "browseEventReserveButton"
    timeout: 15000

- tapOn:
    id: "browseEventReserveButton"

- assertVisible: "Confirm Reservation"
- tapOn: "Yes"

- assertVisible: "Success"
- tapOn: "OK"
